--- a/src/App.css
+++ b/src/App.css
@@ -3,10 +3,16 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
-  margin-top: 0px;
+  margin-top: 0;
 }
 
 .main {
   flex: 1;
-  padding: 20px 0;
+  padding: 20px 15px;
+}
+
+@media (min-width: 768px) {
+  .main {
+    padding: 20px;
+  }
 }
