--- a/src/Footer.css
+++ b/src/Footer.css
@@ -1,53 +1,65 @@
-
 .footer {
-    background-color: #4CAF50;
-    color: white;
-    padding: 20px 0;
-    text-align: center;
+  background-color: #4CAF50;
+  height: 15vh;
+  color: white;
+  padding: 20px 15px;
+  text-align: center;
+  border: 10px solid transparent;
+  border-image: url("https://i.ibb.co/vwNYzmQ/Frame-64.png") 20% repeat;
+}
+
+.text4 {
+  margin-bottom: 10px;
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: yellow;
+  font-family: Arial Rounded MT Bold, sans-serif;
+}
+
+.socialIcons {
+  display: flex;
+  justify-content: center;
+  gap: 15px;
+  flex-wrap: wrap;
+}
+
+.socialLink {
+  color: rgb(17, 16, 16);
+  font-size: 24px;
+  transition: color 0.3s;
+}
+
+.socialLink:hover {
+  color: #ddd;
+}
+
+.la, .la1 {
+  max-width: 100%;
+  height: auto;
+  margin: 10px 0;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    padding: 30px 20px;
     display: flex;
     justify-content: space-between;
-    border: 10px solid transparent;
-  padding: 10px;
-  border-image: url("https://i.ibb.co/vwNYzmQ/Frame-64.png") 20% repeat;
-  
+    align-items: center;
   }
-  
-  .text {
-    margin-bottom: 10px;
-    font-size: 1rem;
+
+  .text4 {
+    font-size: 1.3rem;
   }
-  
-  .socialIcons {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
-  }
-  
+
   .socialLink {
-    color: white;
-    font-size: 24px;
-    transition: color 0.3s;
+    font-size: 28px;
   }
-  
-  .socialLink:hover {
-    color: #ddd;
-  }
-  .la{
+
+  .la {
     margin-left: 30px;
   }
-  .la1{
+
+  .la1 {
     margin-right: 30px;
   }
-  @media (min-width: 768px) {
-    .footer {
-      padding: 30px 0;
-    }
-  
-    .text {
-      font-size: 1.1rem;
-    }
-  
-    .socialLink {
-      font-size: 28px;
-    }
-  }
+}
