--- a/src/Popup.css
+++ b/src/Popup.css
@@ -53,13 +53,14 @@
   
   .thumbnails3 {
     display: flex;
-    gap: 10px;
+    gap: 15px;
     overflow-x: auto;
+    justify-content: space-between;
   }
   
   .thumbnail3 {
-    width: 60px;
-    height: 60px;
+    width: 120px;
+    height: 70px;
     object-fit: cover;
     cursor: pointer;
   }
@@ -88,6 +89,11 @@
   }
   
   .buy-button3 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 40px;
     background-color: #ff4500;
     color: white;
     border: none;
@@ -95,6 +101,7 @@
     font-size: 18px;
     cursor: pointer;
     border-radius: 4px;
+    text-align: center;
   }
   
   @media (max-width: 768px) {
@@ -106,4 +113,4 @@
       margin-right: 0;
       margin-bottom: 20px;
     }
-  }
+  } 
