--- a/src/ProductItem.css
+++ b/src/ProductItem.css
@@ -5,8 +5,12 @@
     padding: 20px;
     text-align: center;
     transition: box-shadow 0.3s;
-    margin-left: 20px;
+    margin-left: 2%;
     margin-right: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+
   }
   
   .productItem:hover {
@@ -22,17 +26,21 @@
   .name {
     font-size: 1.2rem;
     margin-bottom: 10px;
+    margin-left: -55px;
     
   }
   
-  .button {
+  .button4 {
     background-color: #ff4500;
     color: white;
     border: none;
     padding: 8px 16px;
     font-size: 0.9rem;
     cursor: pointer;
+    margin-right: 40px;
     transition: background-color 0.3s;
+    margin-right: -50px;
+    
     
   }
   
