--- a/src/ProductList.css
+++ b/src/ProductList.css
@@ -5,7 +5,7 @@
   }
   
   .title1 {
-    color: #f6a441;
+    color: #faa53e;
     font-size: 2rem;
     margin-bottom: 20px;
     text-align: center;
@@ -15,11 +15,13 @@
     display: flex;
     justify-content: space-around;
   }
-  .l{
+  .aa{
     height: 10px;
-    margin-left: 90px;
-    margin-right: 90px;
-  }
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 20px;
+    /* margin-right: 0px; */
+  } 
   .bor1{
     display: flex;
     height: 10px;
